# AfterWeather

./: .gitignore  AfterWeatherDemo-v0.2.6.apk  README.md  Setup.md  pyproject.toml  requirements.txt  weather_cli.py  weather_ml.py
Fronend/: index.html  style.css
Frontend/: app.js  index.html
